src/app/globals.css
@import "tailwindcss";
html {
  color-scheme: light dark;
    scroll-behavior: smooth;
  
}
/* Set dark mode overrides using the `html.dark` class */
html.dark {
  --background: #0a0a0a;
  --foreground: #ededed;
  --surface: #3c3c3c;
}

:root {
  --background: #ffffff;
  --accent-color: #2f81f7;
  --foreground: #171717;
  --surface: #f5f5f5; /* For navbar/footer backgrounds */
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
    --surface: #3c3c3c; /* For navbar/footer backgrounds */
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
}

